--- a/app/views/dividers/_divider.haml
+++ b/app/views/dividers/_divider.haml
@@ -1,5 +1,5 @@
 %div[divider]
-  - if current_user && divider.editable?(current_user)
+  - if current_user && can?(:update, divider.page)
     = render 'dividers/actions', :divider => divider
   %h3
     %span
