--- a/app/views/notes/_note.haml
+++ b/app/views/notes/_note.haml
@@ -1,5 +1,5 @@
 %div[note]
-  - if current_user && note.editable?(current_user)
+  - if current_user && can?(:update, note.page)
     = render 'notes/actions', :note => note
   %h3=h note.name
   .textilized
