--- a/app/views/pages/_column.haml
+++ b/app/views/pages/_column.haml
@@ -1,6 +1,6 @@
 - content_for :column do
 
-  - if project.editable?(current_user)
+  - if can? :make_pages, project
     = new_page_link(project)
   - else
     %p= t('.cant_create')
@@ -9,7 +9,7 @@
     #column_pages.pages{:reorder_url => resort_project_pages_path(@current_project)}
       %h2
         = t('.all_pages')
-        - if project.editable?(current_user)
+        - if can? :make_pages, project
           %a#page_reorder{:href => '#'}= t('.reorder')
           %a#page_reorder_done{:href => '#', :style => 'display:none'}= t('.reorder_done')
       = list_pages(pages,current_target)
