--- a/app/views/task_lists/_primer.haml
+++ b/app/views/task_lists/_primer.haml
@@ -1,7 +1,7 @@
 #primer{:style => (primer_hidden ? 'display:none' : nil)}
   %p= t('.empty')
   .box
-    - if project.editable?(current_user)
+    - if can? :make_task_lists, project
       %h2= link_to t('.create_first'), new_project_task_list_path(project), {:class => 'create_first_task_list_link'}.merge(show_new_task_list(project))
     %p= t '.define'
     %ul
