--- a/app/views/javascripts/tasks/_task_list.erb
+++ b/app/views/javascripts/tasks/_task_list.erb
@@ -8,8 +8,8 @@
         <span class="loading" style="display:none">Loading...</span>
         <img alt="Triangle" class="triangle" src="/images/triangle.png?1290551794">
         <div class="extra">
-          <a href="/projects/earthworks/task_lists/2/edit?on_index=1&amp;part=title" class="taskListUpdate">Rename task list</a>
-          <a href="/projects/earthworks/task_lists/2/edit?on_index=1&amp;part=date" class="taskListUpdate">Set the start &amp; end date</a>
+          <a href="/projects/earthworks/task_lists/{{id}}/edit?on_index=1&amp;part=title" class="taskListUpdate">Rename task list</a>
+          <a href="/projects/earthworks/task_lists/{{id}}/edit?on_index=1&amp;part=date" class="taskListUpdate">Set the start &amp; end date</a>
           <a href="#" aconfirm="Are you sure you want to resolve and archive this task list?" action_url="/projects/earthworks/task_lists/2/archive?on_index=1" class="taskListResolve">Resolve all tasks and archive</a>
           <a href="#" aconfirm="Are you sure you want to delete this task list?" action_url="/projects/earthworks/task_lists/2?on_index=1" class="taskListDelete">Delete</a>
         </div>
