--- a/app/views/javascripts/tasks/_task.erb
+++ b/app/views/javascripts/tasks/_task.erb
@@ -1,4 +1,4 @@
-<div class="status_new task unassigned unassigned_date" data-task-id="{{id}}" id="task_{{id}}" style="position: relative">
+<div class="status_{{status_class}} task" data-task-id="{{id}}" id="task_{{id}}" style="position: relative">
   <div class="taskStatus">
     <img alt="Drag" class="task_drag" src="/images/drag.png">
     <span data-task-id="{{id}}" class="task_status task_counter">{{comments_count}}</span>
