--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -9,7 +9,7 @@
 
     %h2= t('.tasks_for_project')
 
-  - if @current_project.editable?(current_user)
+  - if can? :make_task_lists, @current_project
     = task_list_form(@current_project,TaskList.new)
 
   #task_lists
