Link google docs to the main omniauth system (although it uses google at the moment as there is a problem with omniauth and underscored names) Automatically try and add read permission in google for the person viewing a google doc

--- a/app/views/users/form/_linked_accounts.haml
+++ b/app/views/users/form/_linked_accounts.haml
@@ -6,4 +6,4 @@
         = link_to t(:'oauth.unlink_account'), unlink_app_path(provider[:provider])
       - else
         = t(:'oauth.your_account_is_not_linked', :provider => provider[:provider].titleize)
-        = link_to t(:'oauth.link_account'), "https://teambox.com/auth/#{provider[:provider]}"
+        = link_to t(:'oauth.link_account'), "#{OmniAuth.config.path_prefix}/#{provider[:provider]}"
