--- a/app/views/google_docs/_file.html.haml
+++ b/app/views/google_docs/_file.html.haml
@@ -1,4 +1,4 @@
 %li
   = google_docs_image google_doc.document_type
-  = link_to google_doc.title, google_doc.url
+  = link_to google_doc.title, project_google_doc_path(:project_id => google_doc.project, :id => google_doc)
   
