--- a/app/views/pages/_actions.haml
+++ b/app/views/pages/_actions.haml
@@ -1,5 +1,5 @@
 .text_actions
   = edit_page_link(@current_project, @page)
-  - if can? :update, @page
+  - if can? :destroy, @page
     = t('common.or')
     = delete_page_link(@current_project, @page)
