--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -91,3 +91,11 @@ $link_hover: #df5249
   font-size: 12px
   color: #500
   font-weight: bold
+
+label.error
+  margin-bottom: 3px
+  border-bottom: 1px dotted red
+
+span.error
+  color: red
+  font-variant: italic
