--- a/app/views/activities/_thread.haml
+++ b/app/views/activities/_thread.haml
@@ -29,7 +29,8 @@
     - form_for [thread.project, thread], :html => {:multipart => true, :id => nil, :class => 'new_comment edit_task', :'data-project-id' => thread.project_id, :'data-remote' => true} do |form|
       - form.fields_for :comments, thread.comments.build do |comment_fields|
         = render 'comments/fields', :f => comment_fields, :task_form => form, :placeholder => t("comments.new.#{thread_class}")
-      
+
   - else
-    - form_for [thread.project, thread, thread.comments.build], :html => {:multipart => true, :id => nil, :'data-project-id' => thread.project_id, :'data-remote' => true} do |form|
-      = render 'comments/fields', :f => form, :placeholder => t("comments.new.#{thread_class}")
+    - form_for [thread.project, thread], :html => {:multipart => true, :id => nil, :class => 'new_comment edit_conversation', :'data-project-id' => thread.project_id, :'data-remote' => true} do |form|
+      - form.fields_for :comments, thread.comments.build do |comment_fields|
+        = render 'comments/fields', :f => comment_fields, :conversation_form => form, :placeholder => t("comments.new.#{thread_class}"), :project => thread.project
