Add some styles and make sure that the google docs stuff uses I18n

--- a/app/styles/application.sass
+++ b/app/styles/application.sass
@@ -21,6 +21,7 @@
 @import calendar
 @import actions_menu
 @import teambox_data
+@import google_docs
 
 @import calendar_date_select
 @import autocomplete
