--- a/app/views/google_docs/authorization_required.html.haml
+++ b/app/views/google_docs/authorization_required.html.haml
@@ -1,4 +1,4 @@
 #google_docs_authorization_required
   %p
-    In order to use google docs you must first authorize teambox to use your google account.
-    = link_to 'Authorize Google Docs', authorize_google_docs_path
+    = t('google_docs.authorization_required')
+    = link_to t('google_docs.authorize_link'), authorize_google_docs_path
