--- a/app/views/google_docs/_form.html.haml
+++ b/app/views/google_docs/_form.html.haml
@@ -1,5 +1,6 @@
 .google_docs_attachment
-  = link_to 'Google Docs', google_docs_path, :rel => 'facebox'
+  - link_to google_docs_path, :rel => 'facebox' do
+    = image_tag 'google_docs/icon_6_document.gif', :class => 'google_docs_logo'
   
   .google_docs_attachment_form_area{:'data-object-name' => f.object_name}
     .fields
