add the ability to add or remove documents from the list you are creating and don't close the facebox

--- a/app/styles/_google_docs.sass
+++ b/app/styles/_google_docs.sass
@@ -1,7 +1,26 @@
 // the google docs included in the comment box
 .google_docs_attachment
   display: inline
+
+// The list on a conversation item
+ul.google_docs_list, .google_docs_attachment ul.file_list
+  margin: 10px 0px 0px 0px
+  padding: 0px
+  list-style: none
+  
+  li
+    margin: 0px 0px 0px 0px
+    padding: 0px
+    list-style-image: none
+    list-style-type: none
     
+    line-height: 18px
+    
+    .google_icon
+      margin:
+        right: 6px
+      vertical-align: middle
+
 
 // The list of google documents in the modal box
 #google_docs
