--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -12,6 +12,7 @@
     = yield :stylesheet_includes
     = organization_link_colour
     = sprockets_include_tag
+    = coffeescript_include_tag
     = yield :js_includes
     - javascript_tag do
       = yield :js_templates
