Final review for Google Docs: Styles, translations, refactoring

--- a/app/styles/_google_docs.sass
+++ b/app/styles/_google_docs.sass
@@ -7,7 +7,6 @@ ul.google_docs_list, .google_docs_attachment ul.file_list
   margin: 10px 0px 0px 0px
   padding: 0px
   list-style: none
-  
   li
     margin: 0px 0px 0px 0px
     padding: 0px
@@ -15,6 +14,7 @@ ul.google_docs_list, .google_docs_attachment ul.file_list
     list-style-type: none
     
     line-height: 18px
+    font-size: 12px
     
     .google_icon
       margin:
@@ -36,7 +36,7 @@ ul.google_docs_list, .google_docs_attachment ul.file_list
   ul#google_docs_list
     margin: 20px 10px 30px 10px
     padding: 0px
-    height: 200px
+    height: 205px
     list-style: none
     overflow-y: auto
     overflow-x: hidden
@@ -47,6 +47,7 @@ ul.google_docs_list, .google_docs_attachment ul.file_list
       list-style-image: none
       list-style-type: none
       line-height: 16px
+      font-size: 12px
       
       img
         vertical-align: middle
