--- a/app/views/google_docs/_new_form.html.haml
+++ b/app/views/google_docs/_new_form.html.haml
@@ -2,5 +2,5 @@
   %h2= t('google_docs.create_new')
   - form_for GoogleDoc.new, :html => {:'data-remote' => true} do |f|
     = f.text_field :title, :placeholder => t('google_docs.new_document_placeholder')
-    = f.select :document_type, GoogleDocs::TYPES.map{|t| [t.titleize, t]}
-    = f.submit "Create", :'data-disable-with' => 'Creating...'
+    = f.select :document_type, GoogleDocs::TYPES_YOU_CAN_CREATE.map{|t| [t.titleize, t]}
+    = f.submit t('google_docs.create'), :'data-disable-with' => t('google_docs.creating')
