--- a/app/views/google_docs/authorization_required.html.haml
+++ b/app/views/google_docs/authorization_required.html.haml
@@ -1,4 +1,3 @@
 #google_docs_authorization_required
-  %p
-    = t('google_docs.authorization_required')
-    = link_to t('google_docs.authorize_link'), authorize_google_docs_path
+  %p= t('google_docs.authorization_required')
+  = link_to t('google_docs.authorize_link'), authorize_google_docs_path, :class => :button
