No more ugly big file icons in the activity feed. Using small file icons now.

--- a/app/styles/_uploads.sass
+++ b/app/styles/_uploads.sass
@@ -90,6 +90,17 @@ $upload_icon_width: 48px
     .size
       color: rgb(120, 120, 120)
 
+.activity
+  .upload_list
+    margin:
+      left: 34px
+      bottom: 20px
+    .upload_file
+      img
+        vertical-align: bottom
+      span
+        position: static
+
 .index_uploads
   .content
     padding: 0px
