Using Thinking Sphinx's excerpt highlighting instead of JS

--- a/app/styles/_search.sass
+++ b/app/styles/_search.sass
@@ -49,9 +49,10 @@
         color: #777
       a
         margin-left: 10px
-        .highlight
-          background-color: #ffc
-          font-weight: bold
+        color: #333
+    span.match
+      background-color: #ffc
+      font-weight: bold
 
 .pagination
   text-align: left
