--- a/app/views/search/_result.haml
+++ b/app/views/search/_result.haml
@@ -4,14 +4,14 @@
     .comment_icon
     = link_to result.project, project_path(result.project)
     &rarr;
-    - name = result.name || truncate( h( sanitize( result.comments.try(:first).try(:body), :tags => [nil]) ), 80)
+    - name = result.excerpts.name || truncate( h( sanitize( result.comments.try(:first).try(:body), :tags => [nil]) ), 80)
     = link_to name, project_conversation_path(result.project, result)
     %span.time= time_ago_in_words result.updated_at
   - when TaskList
     .task_icon
     = link_to result.project, project_path(result.project)
     &rarr;
-    = link_to result.name, project_task_list_path(result.project, result)
+    = link_to result.excerpts.name, project_task_list_path(result.project, result)
     %span.time= time_ago_in_words result.updated_at
   - when Task
     .task_icon
@@ -19,11 +19,11 @@
     &rarr;
     = link_to result.task_list, project_task_list_path(result.project, result.task_list)
     &rarr;
-    = link_to result.name, project_task_path(result.project, result)
+    = link_to result.excerpts.name, project_task_path(result.project, result)
     %span.time= time_ago_in_words result.updated_at
   - when Page
     .page_icon
     = link_to result.project, project_path(result.project)
     &rarr;
-    = link_to result.name, project_page_path(result.project, result)
+    = link_to result.excerpts.name, project_page_path(result.project, result)
     %span.time= time_ago_in_words result.updated_at
