--- a/app/views/task_lists/_fields.html.haml
+++ b/app/views/task_lists/_fields.html.haml
@@ -1,12 +1,12 @@
 %h3= t('.title')
 %p= t('.task_list')
 .name.text_field
-  = f.label :name, t('.name')
+  = f.label :name, t('.name').html_safe
   = f.text_field :name, :autofocus => true
 %p.optional= t('.optional')
 .pick_date
-  = f.label :start_on, t('.start_on')
+  = f.label :start_on, t('.start_on').html_safe
   = date_picker(f, :start_on)
 .pick_date
-  = f.label :finish_on, t('.finish_on')
+  = f.label :finish_on, t('.finish_on').html_safe
   = date_picker(f, :finish_on)
