--- a/app/views/users/calendars.haml
+++ b/app/views/users/calendars.haml
@@ -1,12 +1,12 @@
-%h2= t('.title')
+%h2= t('.title').html_safe
 
-%p= t('.tasks_can_be_synced')
-%p= t('.possible_clients')
+%p= t('.tasks_can_be_synced').html_safe
+%p= t('.possible_clients').html_safe
 
-%h3= t('.how_to.title')
-%p= t('.how_to.body', :link => "http://help.teambox.com/faqs/more-ways-to-access-teambox/sync-tools#feeds")
+%h3= t('.how_to.title').html_safe
+%p= t('.how_to.body', :link => "http://help.teambox.com/faqs/more-ways-to-access-teambox/sync-tools#feeds").html_safe
 
-%h3= t('.your_calendars')
+%h3= t('.your_calendars').html_safe
 
 = subscribe_to_all_calendars_link
 
@@ -14,8 +14,8 @@
   = subscribe_to_calendar_link(project)
 
 - content_for :column do
-  %h2= t('.clients.title')
-  %p= t('.clients.body', :link => "http://help.teambox.com/faqs/more-ways-to-access-teambox/sync-tools#feeds")
+  %h2= t('.clients.title').html_safe
+  %p= t('.clients.body', :link => "http://help.teambox.com/faqs/more-ways-to-access-teambox/sync-tools#feeds").html_safe
 
-  %h2= t('users.feeds.more_tips.title')
-  %p= t('users.feeds.more_tips.body', :link => "http://help.teambox.com/faqs/more-ways-to-access-teambox/sync-tools#feeds")
+  %h2= t('users.feeds.more_tips.title').html_safe
+  %p= t('users.feeds.more_tips.body', :link => "http://help.teambox.com/faqs/more-ways-to-access-teambox/sync-tools#feeds").html_safe
