--- a/app/views/organizations/projects.haml
+++ b/app/views/organizations/projects.haml
@@ -1,7 +1,7 @@
 %h2= t('.title', :name => h(@organization))
 
 - unless Teambox.config.community
-  %p= t('.instructions', :organizations_link => organizations_path)
+  %p= t('.instructions', :organizations_link => organizations_path).html_safe
 
 %p.new_project= link_to t('.new_project'), new_project_path, :class => :add_button
 
