Use Teambox.config instead of APP_CONFIG which fails miserably

--- a/app/views/emailer/reset_password.text.html.haml
+++ b/app/views/emailer/reset_password.text.html.haml
@@ -9,4 +9,4 @@
 
   .footer{ :style => email_text(:small) }
     %p= t('emailer.reset_password.report_abuse', :email => @user.email)
-    %p= t('emailer.reset_password.problems', :support => APP_CONFIG['support'])
+    %p= t('emailer.reset_password.problems', :support => Teambox.config.support)
