--- a/app/views/uploads/index.haml
+++ b/app/views/uploads/index.haml
@@ -6,6 +6,6 @@
       = link_to content_tag(:span, t('.new_file')), new_project_upload_path(@current_project), :class => 'add_button'
     = render 'uploads/form', :project => @current_project, :upload => @upload, :page => nil
     
-    %p= t('.max_upload_size', :mb => APP_CONFIG['asset_max_file_size'])
+    %p= t('.max_upload_size', :mb => Teambox.config.asset_max_file_size)
   - else
     %p= t('.cant_create')
