--- a/app/views/organizations/delete.haml
+++ b/app/views/organizations/delete.haml
@@ -1,7 +1,7 @@
 %h2=h @organization
 
 - if @organization.projects.any?
-  %p=raw t 'organizations.delete.go_delete_some_projects', :link => projects_organization_path(@organization)
+  %p=raw t 'organizations.delete.go_delete_some_projects_html', :link => projects_organization_path(@organization)
 - else
   .danger
     %p= t('.clarification')
