--- a/app/views/organizations/external_view.haml
+++ b/app/views/organizations/external_view.haml
@@ -2,7 +2,7 @@
 
 %p= t('.you_cant_access')
 - unless Teambox.config.community
-  %p= t('.create_your_own_org', :link => organizations_path)
+  %p= t('.create_your_own_org_html', :link => organizations_path)
 
 %br
 
