--- a/app/views/projects/_new_primer.haml
+++ b/app/views/projects/_new_primer.haml
@@ -1,11 +1,11 @@
-%p= t('.define1')
-%p= t('.define2')
+%p= t('.define1_html')
+%p= t('.define2_html')
 %ul
-  %li= t('.feature1')
-  %li= t('.feature2')
-  %li= t('.feature3')
-  %li= t('.feature4')
-  %li= t('.feature5')
-  %li= t('.feature6')
-  %li= t('.feature7')
+  %li= t('.feature1_html')
+  %li= t('.feature2_html')
+  %li= t('.feature3_html')
+  %li= t('.feature4_html')
+  %li= t('.feature5_html')
+  %li= t('.feature6_html')
+  %li= t('.feature7_html')
 %p= t('.footer')
