--- a/app/views/organizations/_active_projects.haml
+++ b/app/views/organizations/_active_projects.haml
@@ -7,7 +7,7 @@
         %p.project
           = link_to h(project), project
           %span.status
-            = t('.role', :role => @roles[role]).html_safe
+            = t('.role_html', :role => @roles[role])
             - if @roles[role] == 'admin'
               =raw "(" + link_to(t('.settings'), edit_project_path(project)) + ")"
       - elsif can?(:admin, @organization)
