--- a/app/views/organizations/_fields.haml
+++ b/app/views/organizations/_fields.haml
@@ -1,9 +1,9 @@
 .text_field
-  %label= t('.name').html_safe
+  %label= t('.name_html')
   = errors_for @organization, :name
   = f.text_field :name
 .text_field
-  %label= t('.permalink').html_safe
+  %label= t('.permalink_html')
   = errors_for @organization, :permalink
   = f.text_field :permalink
 -#.text_field
