--- a/app/views/reset_passwords/sent.haml
+++ b/app/views/reset_passwords/sent.haml
@@ -2,4 +2,4 @@
 
 - form_tag '' do
   %p= t('.login_link_sent', :email => h(params[:email])) 
-  %p= t('.follow_the_link')
+  %p= t('.follow_the_link_html')
