--- a/app/views/users/text_styles.erb
+++ b/app/views/users/text_styles.erb
@@ -11,39 +11,39 @@
 <table class="textile_doc" style="width: 550px">
   <tr>
     <th><%=raw t('.enter_this.title') %></th>
-    <th><%=raw t('.to_see_this.title') %></th>
+    <th><%=raw t('.to_see_this.title_html') %></th>
   </tr>
   <tr>
     <td><pre><%=raw t('.enter_this.bold_text') %></pre></td>
-    <td><%=raw t('.to_see_this.bold_text') %></td>
+    <td><%=raw t('.to_see_this.bold_text_html') %></td>
   </tr>
   <tr>
     <td><pre><%=raw t('.enter_this.italic_text') %></pre></td>
-    <td><%=raw t('.to_see_this.italic_text') %></td>
+    <td><%=raw t('.to_see_this.italic_text_html') %></td>
   </tr>
   <tr>
     <td><pre><%=raw t('.enter_this.header') %></pre></td>
     <td>
-      <%=raw t('.to_see_this.header') %>
+      <%=raw t('.to_see_this.header_html') %>
     </td>
   </tr>
   <tr>
     <td><pre><%=raw t('.enter_this.smaller_header') %></pre></td>
-    <td><%=raw t('.to_see_this.smaller_header') %></td>
+    <td><%=raw t('.to_see_this.smaller_header_html') %></td>
   </tr>
   <tr>
     <td><pre><%=raw t('.enter_this.link') %></pre></td>
-    <td><%=raw t('.to_see_this.link') %></td>
+    <td><%=raw t('.to_see_this.link_html') %></td>
   </tr>
   <tr>
     <td><pre><%=raw t('.enter_this.image') %></pre></td>
-    <td><%=raw t('.to_see_this.image') %></td>
+    <td><%=raw t('.to_see_this.image_html') %></td>
   </tr>
   <tr>
     <td><pre><%=raw t('.enter_this.unordered_list') %></pre></td>
     <td>
       <ul style="padding-left:10px">
-        <%=raw t('.to_see_this.unordered_list') %>
+        <%=raw t('.to_see_this.unordered_list_html') %>
       </ul>
     </td>
   </tr>
@@ -51,7 +51,7 @@
     <td><pre><%=raw t('.enter_this.ordered_list') %></pre></td>
     <td>
       <ol style="padding-left:20px">
-        <%=raw t('.to_see_this.ordered_list') %>
+        <%=raw t('.to_see_this.ordered_list_html') %>
       </ol>
     </td>
   </tr>
