Fix more bad html_safe locale strings. Also fix template issue in pages

--- a/app/views/dividers/_divider.haml
+++ b/app/views/dividers/_divider.haml
@@ -1,6 +1,6 @@
 %div[divider]
   - if current_user && can?(:update, divider.page)
-    = render 'dividers/actions', :divider => divider
+    = render :partial => 'dividers/actions', :locals => {:divider => divider}
   %h3
     %span
       = divider.name.empty?? '&nbsp;' : h(divider.name)
