--- a/app/views/projects/fields/_settings.haml
+++ b/app/views/projects/fields/_settings.haml
@@ -1,5 +1,5 @@
 .name.text_field
-  = f.label :name, t('projects.fields.name')
+  = f.label :name, t('projects.fields.name_html')
   = errors_for project, :name
   = f.text_field :name
 
