--- a/app/views/uploads/_primer.haml
+++ b/app/views/uploads/_primer.haml
@@ -5,6 +5,6 @@
     %p= t '.define1_html'
     %p= t '.define2_html'
     %ul
-      %li= t 'item1_html'
-      %li= t 'item2_html'
-      %li= t 'item3_html'
+      %li= t '.item1_html'
+      %li= t '.item2_html'
+      %li= t '.item3_html'
