--- a/app/views/activities/_create_upload.haml
+++ b/app/views/activities/_create_upload.haml
@@ -5,9 +5,9 @@
       .date= posted_date(activity.created_at)
     - if upload.page
       - link_to_page = link_to upload.page, [activity.project, upload.page]
-      %p= t('.title_with_page', :user => link_to(activity.user, activity.user), :page => link_to_page)
+      %p= t('.title_with_page', :user => link_to(activity.user, activity.user), :page => link_to_page).html_safe
     - else 
-      %p= t('.title', :user => link_to(activity.user, activity.user), :file => "")
+      %p= t('.title', :user => link_to(activity.user, activity.user), :file => "").html_safe
 
     - if upload.image?
       .upload_images
