--- a/app/views/pages/_primer.haml
+++ b/app/views/pages/_primer.haml
@@ -5,9 +5,9 @@
     %p= t '.define1_html'
     %p= t '.define2_html'
     %ul
-      %li= t 'item1_html'
-      %li= t 'item2_html'
-      %li= t 'item3_html'
-      %li= t 'item4_html'
+      %li= t '.item1_html'
+      %li= t '.item2_html'
+      %li= t '.item3_html'
+      %li= t '.item4_html'
     %p= t '.footer1_html' 
     %p= t '.footer2_html'
