--- a/app/views/task_lists/_fields.html.haml
+++ b/app/views/task_lists/_fields.html.haml
@@ -1,7 +1,7 @@
 %h3= t('.title')
 %p= t('.task_list')
 .name.text_field
-  = f.label :name, t('.name')
+  = f.label :name, t('.name_html')
   = f.text_field :name, :autofocus => true
 %p.optional= t('.optional')
 .pick_date
