--- a/app/views/invitations/_new.haml
+++ b/app/views/invitations/_new.haml
@@ -1,4 +1,4 @@
-- form_for [project, invitation], :person do |f|
+= form_for [project, invitation], :person do |f|
   %h2
     = t('invitations.search.invite_people')
   .documentation{:style => 'float:right'}
