--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -13,7 +13,7 @@
     = organization_link_colour
     = sprockets_include_tag
     = yield :js_includes
-    - javascript_tag do
+    = javascript_tag do
       = yield :js_templates
   %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env} controller_#{controller.controller_name}", :reload_url => reload_url}
     = javascript_include_tag 'modernizr', '/i18n/environment'
