--- a/app/views/organizations/edit.haml
+++ b/app/views/organizations/edit.haml
@@ -9,7 +9,7 @@
     = t('common.and')
     = link_to t('.number_of_projects', :count => @organization.projects.count), projects_organization_path(@organization)
 
-  - form_for @organization, :html => { :multipart => true } do |f|
+  = form_for @organization, :html => { :multipart => true } do |f|
     = f.error_messages
     = render 'organizations/fields', :f => f
     .submit
