--- a/app/views/pages/new.haml
+++ b/app/views/pages/new.haml
@@ -1,6 +1,6 @@
 %h2= t('.title')
 
-- form_for [@current_project,@page] do |f|
+= form_for [@current_project,@page] do |f|
   = page_fields(f)
 
   .submit
