--- a/app/views/projects/edit.haml
+++ b/app/views/projects/edit.haml
@@ -5,7 +5,7 @@
 
 - sub_params = @sub_action == 'ownership' ? transfer_project_path(@current_project) : nil
 
-- form_for @current_project, :url => sub_params do |f|
+= form_for @current_project, :url => sub_params do |f|
   = project_fields(f,@current_project,@sub_action)
   - unless @sub_action == 'deletion'
     - if @sub_action == 'ownership'
