--- a/app/views/projects/fields/_new.html.haml
+++ b/app/views/projects/fields/_new.html.haml
@@ -5,7 +5,7 @@
 
 .organization.text_field
   - if current_user.organizations.empty?
-    - f.fields_for :organization do |org_fields|
+    = f.fields_for :organization do |org_fields|
       = org_fields.label :name, t('.choose_organization.new_org_name_html')
       = org_fields.text_field :name, :placeholder => t('organizations.fields.name_placeholder')
       = errors_for(project.organization, :name) || errors_for(project.organization, :permalink)
