--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -6,7 +6,7 @@
       = list_pending_invites(@pending_projects)
 
   - if commentable_projects.any?
-    - form_for @new_conversation, :html => { :multipart => true, :class => 'new_conversation new_comment', :'data-remote' => true } do |form|
+    = form_for @new_conversation, :html => { :multipart => true, :class => 'new_conversation new_comment', :'data-remote' => true } do |form|
       .project_select
         = label_tag :project_id, t('comments.new.comment_on_project')
         = select_tag :project_id, options_for_projects_by_organization(commentable_projects)
@@ -14,7 +14,7 @@
       = form.hidden_field :simple
       
       - form.object.comments.build
-      - form.fields_for :comments do |fields|
+      = form.fields_for :comments do |fields|
         = render 'comments/fields', :f => fields, :placeholder => t('comments.new.project')
 
   - if current_user.projects.any?
