--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -1,6 +1,6 @@
 %h2= t('.title')
 
-- form_for @project do |f|
+= form_for @project do |f|
   = project_fields(f,@project)
   - contacts = current_user.contacts
   .invite_contacts
