--- a/app/views/tasks/new.haml
+++ b/app/views/tasks/new.haml
@@ -3,6 +3,6 @@
 
 %p=h @task_list
 
-- form_for [@current_project,@task_list,@task], :html => {:class => 'app_form'} do |f|
+= form_for [@current_project,@task_list,@task], :html => {:class => 'app_form'} do |f|
   = render 'tasks/fields', :f => f, :project => @current_project, :task_list => @task_list, :task => @task
   = f.submit t('.submit'), :'data-disable-with' => t('.sending')
