--- a/app/views/users/new.haml
+++ b/app/views/users/new.haml
@@ -12,7 +12,7 @@
     %p= t('.existing_user_html', :login_url => login_path, :forgot_url => forgot_password_path)
 
   - secure_url = Teambox.config.secure_logins ? users_url(:protocol => 'https') : nil
-  - form_for @user, :url => secure_url do |f|
+  = form_for @user, :url => secure_url do |f|
     = render 'users/form/new', :f => f, :user => f.object
     .submit
       .submit_button
