--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -22,12 +22,12 @@
   .actions
     .attach
       %span= t('.attach') + ": "
-      = link_to t('uploads.comment_upload_link'), '#uploads', :class => 'attach_icon'
-    
+      = link_to t('uploads.comment_upload_link'), '#uploads', :class => 'attach_icon hoverable', :title => "Attach a file"
+
     = render 'google_docs/form', :f => f
 
     - if task_form
-      = link_to t('comments.hours.tooltip'), '#hours', :class => 'add_hours_icon'
+      = link_to t('comments.hours.tooltip'), '#hours', :class => 'add_hours_icon hoverable', :title => "Log hours"
     
       .task_actions
         = task_form.label :status
