--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -10,12 +10,6 @@ div.column
     font-size: 10px
     float: none
 
-.filter_box
-  #filter_tasks_by_name
-    width: 130px
-  p
-    color: #666
-
 form.new_task, form.edit_task, .task_list_form
   margin-bottom: 10px
   label
@@ -78,6 +72,7 @@ form.new_task, form.edit_task, .task_list_form
     float: right
     font-size: 12px
     color: rgb(200,200,200)
+    margin: 0
   .watching
     font-size: 12px
     margin-left: 20px
@@ -342,3 +337,22 @@ p.assigned_transition
 p.view_for_all
   font-size: 12px
   margin: 10px 0
+
+.filters
+  display: block
+  background-color: #f9f9f9
+  border: 1px solid #ddd
+  font-size: 12px
+  margin: 25px 0
+  padding: 5px 10px
+  input
+    width: 120px
+    margin: 0 5px
+  select
+    margin: 0 5px
+    max-width: 150px
+  a.closeThis
+    float: right
+    color: #555
+    text-decoration: underline
+    padding-top: 2px
