--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -1,7 +1,5 @@
-- if @task_list.nil?
-  - if can?(:make_task_lists, project)
-    = task_list_link(project)
-  - else
+- unless @task_list
+  - unless can?(:make_task_lists, project)
     %p= t('.cant_create')
 
 - case location_name
@@ -11,10 +9,8 @@
 
   - when 'show_task_lists'
     = task_list_overview_box(@task_list)
-    = filter_task_lists(project)
 
   - when 'index_task_lists'
-    = filter_task_lists(project)
 
 %h2= t('.other_views')
 = gantt_view_link(@current_project)
