--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -225,6 +225,10 @@ form.new_task, form.edit_task, .task_list_form
         display: block
         padding-left: 46px
         margin: 3px 0 5px
+        font-size: 11px
+        color: #555
+        a
+          color: #555
 
 div.tasks
   padding-bottom: 5px
