fix community feature

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -21,7 +21,7 @@
     = archived_project_strip(@current_project)
     #header_wrap
       = header
-    /= configure_this_organization
+    = configure_this_organization
     #container.container
       .wrapper
         - show_flash
