Overriding link colors in the activity stream, using bold black

--- a/app/styles/application.sass
+++ b/app/styles/application.sass
@@ -66,3 +66,6 @@ div.column_wrap h2
       top:  6px
       left: 25px
     color: #333
+
+.activity_block a, .starter a, .thread_title a, .before a
+  color: #333
