Highlighting "show X more comments" and making it easier to click

--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -45,9 +45,15 @@
       .body
         margin-top: 0
     .more_comments
-      padding: 10px 10px 10px 54px
       display: block
       font-size: 12px
+      background-color: #ffe
+      +gradient(#ffe, #ffd)
+      a
+        color: #333
+        display: block
+        padding: 10px 10px 10px 54px
+        height: 16px
     .comment
       padding: 5px 0
       .info
