--- a/app/views/emailer/confirm_email.html.haml
+++ b/app/views/emailer/confirm_email.html.haml
@@ -5,7 +5,7 @@
   %p= t('emailer.confirm.hey', :user_name => h(@user.name))
 
   .box{ :style => email_box }  
-    %p= t('emailer.confirm.follow_this_link', :complete => content_tag(:b, t('emailer.confirm.complete')) )
+    %p=raw t('emailer.confirm.follow_this_link', :complete => content_tag(:b, t('emailer.confirm.complete')) )
     %h2{ :style => email_text(:big) }
       = link_to t('emailer.confirm.log_in'), @login_link
 
