Unescape bold tags in mailer translations

--- a/app/views/emailer/forgot_password.html.haml
+++ b/app/views/emailer/forgot_password.html.haml
@@ -5,7 +5,7 @@
   %p= t('emailer.reset_password.hey', :user_name => h(@user.name))
 
   .box{ :style => email_box }  
-    %p= t('emailer.reset_password.follow_this_link', :new_password => content_tag(:b, t('emailer.reset_password.new_password')))
+    %p=raw t('emailer.reset_password.follow_this_link', :new_password => content_tag(:b, t('emailer.reset_password.new_password')))
     %h2{ :style => email_text(:big) }
       = link_to t('emailer.reset_password.log_in'), @url
 
