--- a/app/views/emailer/signup_invitation.html.haml
+++ b/app/views/emailer/signup_invitation.html.haml
@@ -8,7 +8,7 @@
   .box{ :style => email_box }
     %p= t('emailer.invitation.collaborate_with', :name => h(@referral.name))
     %p{ :style => email_text(:big) }
-      = t('emailer.invitation.you_have_been_invited_to', :project => content_tag(:b, h(@project.name)))
+      =raw t('emailer.invitation.you_have_been_invited_to', :project => content_tag(:b, h(@project.name)))
     %h2{ :style => email_text(:big) }
       = link_to t('emailer.invitation.accept_the_invitation'), new_user_url(:invitation => @invitation.token)
     %p
