--- a/app/views/invitations/_pending.haml
+++ b/app/views/invitations/_pending.haml
@@ -1,7 +1,7 @@
 .project
   = thumb_avatar(invitation.user)
   .text
-    = t('.invited_to_join', :by => user_link(invitation.user), :project => content_tag(:b,h(invitation.target.name)))
+    =raw t('.invited_to_join', :by => user_link(invitation.user), :project => content_tag(:b,h(invitation.target.name)))
   
   .actions
     = form_for invitation.project, :url => accept_project_invitation_path(invitation.target,invitation), :html => { :class => 'accept_project' } do |f|
